# nanocsv

./: README.md  main.py  pyproject.toml
example/: demo.csv
src/nanocsv/: commands.py  executor.py  msg.py  parser.py  tokenizer.py
tests/: test_nanocsv.py
